# crew

./: README.md  crew.py  github_tool.py  pyproject.toml
src/github_reader/: main.py
src/github_reader/config/: agents.yaml  tasks.yaml
